# Haskell

./: .gitignore  README.md  simple.hsfiles
FirstProject/: FirstProject.cabal  README.md
FirstProject/src/: Haskell Stack REPL  Main.hs  Miedviediev01.hs  Miedviediev02.hs  Miedviediev03.hs  Miedviediev04.hs  Miedviediev05.hs  Miedviediev06.hs  Miedviediev07.hs  Miedviediev08.hs  Miedviediev09.hs  Miedviediev10.hs  MiedviedievTask.hs  Practices.hs  Test.hs
